--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
 
         // Actualizar el contenido del elemento con el nombre proporcionado
         if (name) {
-            name = encodeURIComponent(name);
-            document.getElementById('name').innerText = decodeURIComponent(name);
+            document.getElementById('name').innerText = name;
         }
     </script>
 </body>
